# anya-ra

./: .gitignore  CNAME  CONTRIBUTING.md  LICENSE  README.md  RELEASE.md  _config.yml  index.html  package.json  pnpm-lock.yaml  tsconfig.json  vite.config.ts  vitest.config.ts
.github/workflows/: build-release.yml  pages.yml  tests.yml
.planning/: MILESTONES.md  OPTIMIZATION_CHECKLIST.md  PROJECT.md  QUICK-START.txt  REQUIREMENTS.md  RESEARCH-INDEX.md  RESEARCH.md  ROADMAP.md  STATE.md  config.json  export-workspace-RESEARCH.md  p6-t03-t04-SUMMARY.md
.planning/phases/: 08-CONTEXT.md  SEARCH-RESEARCH.md
.planning/phases/04-llm-integration/: 04-01-PLAN.md  04-01-SUMMARY.md  04-02-PLAN.md  04-02-SUMMARY.md  04-03-PLAN.md  (+5 more)
.planning/research/: PITFALLS.md  SUMMARY.md
docs/: AI_SETUP.md  GITHUB_PAGES.md  _config.yml  index.md
scripts/: measure-startup.sh
src/: App.svelte  pdfjs-dist.d.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs  main.rs  types.rs  workspace_paths.rs
src-tauri/src/commands/: annotations.rs  chat.rs  documents.rs  graph.rs  keystore.rs  migration.rs  mod.rs  notes.rs  papers.rs  ui_layout.rs  workspace.rs
tests/: annotations.test.ts  coordinate-transform.test.ts  notes-workflow.test.ts  pdf-loader.test.ts  pdf-rendering.test.ts  perf.bench.ts  persistence.test.ts  setup.ts  sticky-notes.test.ts  text-selection.test.ts
tests/services/: document-validation.test.ts  export-types.test.ts  index-html.test.ts  paper-html.test.ts  search-index.test.ts  workspace-export.test.ts
(+122 files in other folders)
